<resources>
    <string name="app_name">DigiMED</string>
    <string name="login_page">Login Page</string>
    <string name="logo_content_description">The main launch screen logo</string>
    <string name="Email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered? Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="hint_c_password">Confirm password</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_family_name">Family Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="weight_kg">Weight</string>
    <string name="height_cm">Height</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="hint_med_con">What is your medical condition?</string>
    <string name="btn_save_profile">Save</string>
    <string name="record">record</string>
    <string name="play">play</string>
    <string name="action_settings">Settings</string>
    <string name="profile_image_des">Patient profile image</string>
    <string name="record_btn">Record Video</string>
    <string name="data_packet">Confirm eConsultation</string>
    <string name="make_packet">New eConsultation</string>
    <string name="sub_btn">Submit</string>
    <string name="Title">Title your new eConsultation.</string>
    <string name="RecordVideo">Recorded Video</string>
    <string name="heartRate">Heart Rate</string>
    <string name="createDatapacket">Create Data Packet</string>
    <string name="NextPage">Next</string>
    <string name="Done">Done</string>
    <string name="PatientImage">Patient Profile Picture</string>
    <string name="DoctorName">Doctor Name</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_Cloud">Upload from Cloud Storage</string>
    <string name="btn_Storage">Upload from Phone Storage</string>
    <string name="btn_upload">Upload a File</string>
    <string name="edit">Edit</string>
    <string name="occupation">Occupation</string>
    <string name="doc_occupation">Doctor Occupation</string>
    <string name="home">Home</string>
    <string name="new_eConsultation">New eConsultation</string>
    <string name="my_doctors">My Doctors</string>
    <string name="find_doctors">Find Doctors</string>
    <string name="find_facilities">Find Medical Facilities</string>
    <string name="last_name">Last Name</string>
    <string name="doctor_check">I am a doctor.</string>
    <item name="action_settings" type="id">Settings</item>
</resources>

