<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/Home"
        android:title="@string/home"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/createDataPacket"
        android:icon="@drawable/messages"
        android:title="@string/new_eConsultation" />

    <item android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/profile_icon"/>

    <item
        android:id="@+id/MyDoctors"
        android:icon="@drawable/friends"
        android:title="My Doctors" />

    <item
        android:id="@+id/findDoctors"
        android:icon="@drawable/find_people"
        android:title="Find Doctors" />

    <item
        android:id="@+id/medicalcen"
        android:icon="@drawable/profile_icon"
        android:title="@string/find_facilities" />

    <item android:id="@+id/signOut"
        android:title="@string/btn_sign_out"
        android:icon="@drawable/logout"/>
</menu>