<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/docprofileimage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:src="@drawable/profile"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/docfirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/docprofileimage"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/hint_first_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/doclastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/docfirstName"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/hint_family_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/docweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/doclastName"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/weight_kg"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/docheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/docweight"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/height_cm"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dococcupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/docheight"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/occupation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <Button
            android:id="@+id/doceditProfile"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/dococcupation"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/edit"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>