<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileimage"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:src="@drawable/profile"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_below="@id/profileimage"
                android:text="@string/hint_first_name"
                android:layout_margin="15sp"/>

            <TextView
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_below="@id/firstName"
                android:text="@string/hint_family_name"
                android:layout_margin="15sp"/>

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_below="@id/lastName"
                android:text="@string/weight_kg"
                android:layout_margin="15sp"/>
            <TextView
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_below="@id/weight"
                android:text="@string/height_cm"
                android:layout_margin="15sp"/>
            <TextView
                android:id="@+id/medcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_below="@id/height"
                android:text="@string/hint_med_con"
                android:layout_margin="15sp"/>

            <Button
                android:id="@+id/editProfile"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/medcon"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/edit"
                android:textAllCaps="true"
                android:textColor="@color/white" />
    </RelativeLayout>
</ScrollView>