<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Doctor_End.DoctorProfileActivity"
    android:background="@color/white"
    >



    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_pic"
        android:layout_width="234dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"

        android:src="@drawable/profile"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white">




            <EditText
                android:id="@+id/editTextFName"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editFamilyName"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_family_name"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorPrimaryDark" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/date_of_birth"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white">

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/weight_kg"
                android:inputType="numberDecimal"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/height_cm"
                android:inputType="numberDecimal"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorPrimaryDark" />
        </RelativeLayout>


        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingBottom="15dp"
                android:text="@string/gender_male"
                android:textColorHint="@color/colorPrimaryDark"


                />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingBottom="15dp"
                android:text="@string/gender_female"
                android:textColorHint="@color/colorPrimaryDark"

                />


        </RadioGroup>


        <EditText
            android:id="@+id/editMedCon"
            android:layout_width="259dp"
            android:layout_height="98dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="Current occupation"
            android:inputType="textLongMessage"
            android:labelFor="@id/tvDate"
            android:paddingBottom="15dp"
            android:textColorHint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonSaveDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_save_profile"
            android:textAllCaps="true"
            android:textColor="@color/white" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />





</LinearLayout>